Solves alignment issues with combined field in header collapsible

--- a/manon/components/form.scss
+++ b/manon/components/form.scss
@@ -1,9 +1,6 @@
 @use "../variables" as theme;
 
-form,
-main section form,
-main article form,
-main div form {
+form {
   display: flex;
   flex-direction: column;
   width: 100%;
@@ -51,21 +48,5 @@ main div form {
     display: table-cell;
     width: auto;
     text-align: center;
-  }
-}
-
-/* Resetting inherited layout padding */
-main {
-  div,
-  div div,
-  section,
-  section div,
-  article,
-  article div {
-    form {
-      div {
-        padding: 0;
-      }
-    }
   }
 }
