--- a/themes/icore-open/_index.scss
+++ b/themes/icore-open/_index.scss
@@ -208,7 +208,7 @@ and spacing sets */
 
   // collapsing element
   $collapsing-element-justify-content: space-between,
-  $collapsing-element-align-items: flex-start,
+  $collapsing-element-align-items: center,
   $collapsing-element-flex-direction: column,
   $collapsing-element-gap: 0,
   $collapsing-element-width: auto,
